--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
 
       - name: prune for production
-        run: npm prune --production
+        run: npm prune --omit=dev
 
       - name: Setup Node
         uses: actions/setup-node@v4
