--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "azure-sso-handler",
-  "version": "0.1.0",
+  "name": "@dennoa/azure-sso-handler",
+  "version": "1.0.0",
   "description": "Azure SSO Handler library for authentication and token management.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
     "build": "tsc",
