--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           sed -i "s/\"version\": \".*\"/\"version\": \"${{ steps.extract-tag.outputs.tag }}\"/" package.json
 
-      - name: Update .nmprc
+      - name: Update .npmrc
         run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
 
       - name: install dependencies
