--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
       - name: install dependencies
         run: npm ci
 
-      - name: build
-        run: npm run build
+      - name: build for production
+        run: npm run build:prod
 
       - name: prune for production
         run: npm prune --omit=dev
