--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,6 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@dennoa'
 
-      - run: npm publish --access restricted
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
